# swodlr-cli

./: README.md  pyproject.toml
podaac/swodlr/cli/: __main__.py
podaac/swodlr/cli/graphql-documents/: get_users_products.graphql  invalidate_product.graphql  search_products.graphql
